alterações finais, falta botão e ifs

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,6 +10,11 @@
       content="Web site created using create-react-app"
     />
 
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
     
     
     <title>Oliver's Restaurant</title>
